[workspace]
members = [".", "crates/cp-base", "crates/cp-console-server", "crates/cp-mod-callback", "crates/cp-mod-console", "crates/cp-mod-files", "crates/cp-mod-git", "crates/cp-mod-github", "crates/cp-mod-logs", "crates/cp-mod-memory", "crates/cp-mod-queue", "crates/cp-mod-scratchpad", "crates/cp-mod-spine", "crates/cp-mod-todo", "crates/cp-mod-tree", "crates/cp-mod-prompt", "crates/cp-mod-preset", "crates/cp-mod-typst", "crates/cp-mod-brave", "crates/cp-mod-firecrawl"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Context Pilot — AI coding assistant TUI"
repository = "https://github.com/gdraznieks/context-pilot"
keywords = ["ai", "tui", "coding-assistant"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[workspace.dependencies]
cp-base = { path = "crates/cp-base" }
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
chrono = "0.4"
regex = "1.10"
ignore = "0.4"
globset = "0.4"
unicode-width = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[workspace.lints.rust]
# Visibility hygiene — flag pub items that don't need to be pub
unreachable_pub = "deny"
# Missing Debug impls on public types (good for inspectability)
missing_debug_implementations = "deny"
# Elided lifetimes in impl blocks — forces explicit 'a where it matters
elided_lifetimes_in_paths = "deny"
# Prefer crate-relative paths
absolute_paths_not_starting_with_crate = "deny"
# Ambiguous negative literals — force parens
ambiguous_negative_literals = "deny"
# Prefer async || over || async {}
closure_returning_async_block = "deny"
# 2024: deprecated safe on extern fns
deprecated_safe_2024 = "deny"
# Deref into dyn supertrait ambiguity
deref_into_dyn_supertrait = "deny"
# 2024: expr fragment specifier change
edition_2024_expr_fragment_specifier = "deny"
# Explicit outlives bounds that can be inferred
explicit_outlives_requirements = "deny"
# 2024: if-let temporary rescoping
if_let_rescope = "deny"
# impl Trait overcaptures lifetimes
impl_trait_overcaptures = "deny"
# Using 2024 keywords as identifiers
keyword_idents_2024 = "deny"
# Silently dropping a guard with let _ = ...
let_underscore_drop = "deny"
# #[macro_use] on extern crate
macro_use_extern_crate = "deny"
# Macro meta-variable misuse
meta_variable_misuse = "deny"
# Missing Copy on types that could derive it
missing_copy_implementations = "deny"
# Missing docs on public items
missing_docs = "deny"
# Missing unsafe on extern blocks (2024)
missing_unsafe_on_extern = "deny"
# Non-ASCII identifiers
non_ascii_idents = "deny"
# Redundant imports
redundant_imports = "deny"
# Redundant lifetime parameters
redundant_lifetimes = "deny"
# 2024: guarded string syntax
rust_2024_guarded_string_incompatible_syntax = "deny"
# 2024: incompatible patterns
rust_2024_incompatible_pat = "deny"
# 2024: prelude collisions
rust_2024_prelude_collisions = "deny"
# Single-use lifetime parameters
single_use_lifetimes = "deny"
# 2024: tail expression drop order
tail_expr_drop_order = "deny"
# Trivial casts (e.g. &T as &T)
trivial_casts = "deny"
# Trivial numeric casts (e.g. u32 as u32)
trivial_numeric_casts = "deny"
# Binding a unit value
unit_bindings = "deny"
# Types that can't be named by external users
unnameable_types = "deny"
# unsafe attribute without unsafe() wrapper (2024)
unsafe_attr_outside_unsafe = "deny"
# All unsafe code must be opted-in per module
unsafe_code = "deny"
# Unsafe operations inside unsafe fn need unsafe blocks
unsafe_op_in_unsafe_fn = "deny"
# Unused crate dependencies
unused_crate_dependencies = "deny"
# Unused extern crates
unused_extern_crates = "deny"
# Unnecessary braces around single import
unused_import_braces = "deny"
# Unused lifetime parameters
unused_lifetimes = "deny"
# Unused macro rules
unused_macro_rules = "deny"
# Unnecessary path qualifications
unused_qualifications = "deny"
# Unused return values
unused_results = "deny"
# Large variant size differences
variant_size_differences = "deny"
# --- Warn-by-default promoted to deny ---
# Two globs re-exporting the same name — always a bug
ambiguous_glob_reexports = "deny"
# Comparing fat pointers doesn't do what you think
ambiguous_wide_pointer_comparisons = "deny"
# Deprecated syntax, always wrong on edition 2024
anonymous_parameters = "deny"
# Edition migration footgun, always fix
array_into_iter = "deny"
# Always wrong on 2024, use `dyn Trait`
bare_trait_objects = "deny"
# Same class as array_into_iter, always fix
boxed_slice_into_iter = "deny"
# Ambiguous syntax, always a bug
break_with_label_and_loop = "deny"
# Two different signatures for same extern symbol — always a bug
clashing_extern_declarations = "deny"
# Soundness-adjacent, always fix
coherence_leak_check = "deny"
# Identifiers that look alike (latin/cyrillic) — always a bug or attack
confusable_idents = "deny"
# Soundness issue, always fix
const_evaluatable_unchecked = "deny"
# Duplicate of const_item_mutation, same reasoning
const_item_interior_mutations = "deny"
# Mutating a const is always a bug (you get a copy each time)
const_item_mutation = "deny"
# Always a bug — pointer to dropped local
dangling_pointers_from_locals = "deny"
# Always a bug — pointer to dropped temporary
dangling_pointers_from_temporaries = "deny"
# Using deprecated APIs should be fixed immediately
deprecated = "deny"
# Always wrong syntax, easy fix
deprecated_where_clause_location = "deny"
# Always confusing, always a mistake
double_negations = "deny"
# T: Drop bound is always wrong (not all droppable types impl Drop)
drop_bounds = "deny"
# drop() on a Copy type does nothing, always a bug
dropping_copy_types = "deny"
# drop(&x) does nothing, always a bug
dropping_references = "deny"
# Always a mistake
duplicate_macro_attributes = "deny"
# dyn Drop is almost never what you want
dyn_drop = "deny"
# Use ..= not ..., always wrong on modern Rust
ellipsis_inclusive_range_patterns = "deny"
# for x in Some(v) is always a bug
for_loops_over_fallibles = "deny"
# forget() on Copy type does nothing, always a bug
forgetting_copy_types = "deny"
# forget(&x) does nothing, always a bug
forgetting_references = "deny"
# Casting fn pointer to integer is always suspicious
function_casts_as_integer = "deny"
# Taking reference to function item instead of fn pointer — always a bug
function_item_references = "deny"
# A named re-export silently hides a glob re-export — always confusing
hidden_glob_reexports = "deny"
# FFI type mismatch is always a bug
improper_ctypes = "deny"
# Same for definitions
improper_ctypes_definitions = "deny"
# Always a bug — use ptr::from_exposed_addr instead
integer_to_ptr_transmutes = "deny"
# Always a bug
invalid_from_utf8 = "deny"
# Comparing with NaN is always wrong
invalid_nan_comparisons = "deny"
# Creating invalid values is always UB
invalid_value = "deny"
# if let on irrefutable pattern is always a logic error
irrefutable_let_patterns = "deny"
# Always wrong, will become a hard error
late_bound_lifetime_arguments = "deny"
# Always a mistake in attribute syntax
malformed_diagnostic_attributes = "deny"
# Always a mistake
malformed_diagnostic_format_literals = "deny"
# .map(f) where f returns () — always meant .for_each()
map_unit_fn = "deny"
# Always a mistake in attribute placement
misplaced_diagnostic_attributes = "deny"
# extern without ABI string — always specify "C" explicitly
missing_abi = "deny"
# Mixed unicode scripts in idents — always a bug or attack
mixed_script_confusables = "deny"
# Confusing format string usage, always fix
named_arguments_used_positionally = "deny"
# no_mangle on generic item does not work, always a bug
no_mangle_generic_items = "deny"
# Rust convention, LLMs must follow it
non_camel_case_types = "deny"
# Gap in range match — always a bug
non_contiguous_range_endpoints = "deny"
# panic!(variable) instead of panic!("{}", variable) — always fix
non_fmt_panics = "deny"
# impl in weird scopes — always wrong
non_local_definitions = "deny"
# Foo { x: x } instead of Foo { x } — always fix
non_shorthand_field_patterns = "deny"
# Rust convention, LLMs must follow it
non_snake_case = "deny"
# Rust convention, LLMs must follow it
non_upper_case_globals = "deny"
# Calling .clone() on &T where T: !Clone does nothing — always a bug
noop_method_call = "deny"
# Overlapping ranges in match — always a bug
overlapping_range_endpoints = "deny"
# x; as a statement with no effect — always a bug
path_statements = "deny"
# Public API with private bounds — always wrong
private_bounds = "deny"
# Public API exposing private types — always wrong
private_interfaces = "deny"
# Always a bug in const context
ptr_to_integer_transmute_in_consts = "deny"
# Always remove, never intentional
redundant_semicolons = "deny"
# Stale lint config — always fix
renamed_and_removed_lints = "deny"
# Always confusing scoping bug
self_constructor_from_outer_item = "deny"
# Misusing lib/main as module names — always a mistake
special_module_name = "deny"
# feature(x) where x is stable — always remove
stable_features = "deny"
# References to mutable statics are always unsound
static_mut_refs = "deny"
# .deref() on &&T — almost always a bug
suspicious_double_ref_op = "deny"
# where i32: Copy — always pointless
trivial_bounds = "deny"
# Bounds on type aliases are ignored — always misleading
type_alias_bounds = "deny"
# Will become hard error, always fix
tyvar_behind_raw_pointer = "deny"
# Unusual unicode in idents — always suspicious
uncommon_codepoints = "deny"
# Infinite recursion — always a bug
unconditional_recursion = "deny"
# Coherence violation — always fix
uncovered_param_in_projection = "deny"
# Static of uninhabited type — always a bug
uninhabited_static = "deny"
# Always a scoping mistake in tests
unnameable_test_items = "deny"
# Transmute where a safe cast exists — always fix
unnecessary_transmutes = "deny"
# Comparing fn pointers is never reliable — always a bug
unpredictable_function_pointer_comparisons = "deny"
# Always a bug
unreachable_code = "deny"
# Always a bug
unreachable_patterns = "deny"
# Your method will be shadowed by std — always fix
unstable_name_collisions = "deny"
# Always a bug
unsupported_calling_conventions = "deny"
# Unnecessary Box/Vec allocation — always fix
unused_allocation = "deny"
# Dead bounds — always remove
unused_associated_type_bounds = "deny"
# Attribute does nothing — always a mistake
unused_attributes = "deny"
# Always remove
unused_braces = "deny"
# Comparison that's always true/false — always a bug
unused_comparisons = "deny"
# Doc comment on non-item — always misplaced
unused_doc_comments = "deny"
# Feature gate not needed — always remove
unused_features = "deny"
# Dead label — always remove
unused_labels = "deny"
# Ignoring Result/#[must_use] — always a bug
unused_must_use = "deny"
# Unnecessary mut — always fix
unused_mut = "deny"
# Unnecessary parens — always remove
unused_parens = "deny"
# Unnecessary unsafe block — always remove
unused_unsafe = "deny"
# Null check on reference-derived pointer — always a bug
useless_ptr_null_checks = "deny"
# Always fix, will become hard error
varargs_without_pattern = "deny"
# while true instead of loop — always fix
while_true = "deny"
# --- Remaining warn-by-default promoted to deny ---
# NEON on softfloat AArch64 — always a bug
aarch64_softfloat_neon = "deny"
# Partial register use in inline asm — always fix
asm_sub_register = "deny"
# async fn in trait without Send bounds — always be explicit
async_fn_in_trait = "deny"
# AT&T vs Intel asm style — always fix
bad_asm_style = "deny"
# Dead code — always remove
dead_code = "deny"
# Leaking private deps through public API — always fix
exported_private_dependencies = "deny"
# Using #[deny(lint_group)] — always spell out individual lints
forbidden_lint_groups = "deny"
# Incomplete feature gates — always be explicit
incomplete_features = "deny"
# #[inline] on #[no_sanitize] — always a bug
inline_no_sanitize = "deny"
# Using internal rustc features — always wrong in user code
internal_features = "deny"
# Large values moved on stack — always fix
large_assignments = "deny"
# Inconsistent lifetime syntax — always fix
mismatched_lifetime_syntaxes = "deny"
# Opaque type with hidden inferred bounds — always be explicit
opaque_hidden_inferred_bound = "deny"
# Refining impl trait in internal items — always be explicit
refining_impl_trait_internal = "deny"
# Refining impl trait in reachable items — always be explicit
refining_impl_trait_reachable = "deny"
# repr(C) enum larger than c_int — always be explicit
repr_c_enums_larger_than_int = "deny"
# RTSAN nonblocking async — always fix
rtsan_nonblocking_async = "deny"
# Unexpected cfg conditions — always fix
unexpected_cfgs = "deny"
# Lint expectation not fulfilled — always fix
unfulfilled_lint_expectations = "deny"
# Ungated async fn track_caller — always fix
ungated_async_fn_track_caller = "deny"
# Unknown diagnostic attributes — always a mistake
unknown_diagnostic_attributes = "deny"
# Unknown lint names — always fix
unknown_lints = "deny"
# Unstable syntax before expansion — always fix
unstable_syntax_pre_expansion = "deny"
# Dead assignments — always remove
unused_assignments = "deny"
# Dead imports — always remove
unused_imports = "deny"
# Dead macros — always remove
unused_macros = "deny"
# Unused variables — always remove
unused_variables = "deny"
# Power alignment issues — always fix
uses_power_alignment = "deny"
# Redundant lifetime captures in impl Trait return types
impl_trait_redundant_captures = "deny"
# Treat all remaining warnings as errors
warnings = "deny"

[workspace.lints.clippy]
# Performance
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
redundant_clone = "warn"
large_enum_variant = "deny"
# Clarity
needless_return = "warn"
manual_let_else = "warn"
match_wildcard_for_single_variants = "warn"
implicit_clone = "deny"
# Safety / correctness
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
# Style consistency
enum_glob_use = "warn"
single_match_else = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"

# ============================
# Pedantic → warn
# ============================
# Detect `as` casts where the value could wrap (e.g. u32 → i32)
cast_possible_wrap = "warn"
# Detect `as` casts that lose floating-point precision (e.g. f64 → f32)
cast_precision_loss = "warn"
# Detect pointer casts to more-aligned types
cast_ptr_alignment = "warn"
# Suggest checked conversions (try_from) over raw `as`
checked_conversions = "warn"
# Collapse `else { if ... }` into `else if ...`
collapsible_else_if = "warn"
# Prefer if/else chains over match for ordered comparisons
comparison_chain = "deny"
# Derive Copy on iterators that can be copied
copy_iterator = "warn"
# Use Type::default() instead of Default::default()
default_trait_access = "deny"
# Detect broken intra-doc links
doc_broken_link = "warn"
# Detect accidental double-space linebreaks in doc comments
doc_comment_double_space_linebreaks = "deny"
# Detect quoted links in doc comments
doc_link_with_quotes = "deny"
# Detect unformatted markdown in doc comments
doc_markdown = "deny"
# Detect lifetimes that could be elided
elidable_lifetime_names = "warn"
# Detect empty enums that should be ! (never type)
empty_enums = "warn"
# Prefer *x over x.deref()
explicit_deref_methods = "warn"
# Prefer `for x in &collection` over `for x in collection.into_iter()`
explicit_into_iter_loop = "warn"
# Prefer `for x in &collection` over `for x in collection.iter()`
explicit_iter_loop = "warn"
# Prefer `find_map` over `filter_map().next()`
filter_map_next = "warn"
# Prefer `filter_map` over `filter().map()` with Option
flat_map_option = "warn"
# Warn on `==` comparison of floats (use approx comparison)
float_cmp = "deny"
# Flag functions with >3 bool parameters
fn_params_excessive_bools = "deny"
# Prefer `.collect()` over `FromIterator::from_iter()`
from_iter_instead_of_collect = "deny"
# Prefer `if x` over `if !x { } else { }`
if_not_else = "warn"
# Require reason on `#[ignore]` test attributes
ignore_without_reason = "warn"
# Use `_` for ignored unit patterns in match arms
ignored_unit_patterns = "warn"
# Prefer generic `S: BuildHasher` over concrete `HashMap`/`HashSet`
implicit_hasher = "deny"
# Prefer consistent field ordering matching struct definition
inconsistent_struct_constructor = "warn"
# Use slice patterns `[first, ..]` instead of `v[0]` on refutable slices
index_refutable_slice = "warn"
# Prefer `to_string()` on `&str` over `String::from()` or `.to_owned()`
inefficient_to_string = "deny"
# Suggest adding `iter()` method when `IntoIterator` is implemented
into_iter_without_iter = "deny"
# Warn on items (fn, struct, etc.) defined after statements in a block
items_after_statements = "deny"
# Prefer `.flatten()` over `.filter(Result::is_ok).map(Result::unwrap)`
iter_filter_is_ok = "warn"
# Prefer `.flatten()` over `.filter(Option::is_some).map(Option::unwrap)`
iter_filter_is_some = "warn"
# Iterator-returning methods should return a type named `*Iter*`
iter_not_returning_iterator = "deny"
# Suggest adding `into_iter()` method when `iter()` is implemented
iter_without_into_iter = "deny"
# Detect large futures that should be boxed
large_futures = "deny"
# Detect large stack arrays that should be heap-allocated
large_stack_arrays = "deny"
# Detect large types passed by value that should be references
large_types_passed_by_value = "deny"
# Prefer `assert!` over `if !cond { panic!() }`
manual_assert = "deny"
# Prefer `elapsed()` over `Instant::now() - start`
manual_instant_elapsed = "warn"
# Prefer `matches!()` over `if let Some/Ok/Err/None`
manual_is_variant_and = "warn"
# Prefer `String::new()` over `String::from("")` or `"".to_string()`
manual_string_new = "deny"
# Flag functions with many single-character variable names
many_single_char_names = "deny"
# Prefer `map_or`/`map_or_else` over `map().unwrap_or()`
map_unwrap_or = "deny"

# ============================
# Suspicious → deny
# ============================
# Always a bug — range missing a char
almost_complete_range = "deny"
# Arc<T> where T is not Send+Sync is always wrong
arc_with_non_send_sync = "deny"
# Holding bad type across await is always a bug
await_holding_invalid_type = "deny"
# Holding lock across await is always a deadlock risk
await_holding_lock = "deny"
# RefCell borrow across await
await_holding_refcell_ref = "deny"
# Enabling all restriction lints is always wrong
blanket_clippy_restriction_lints = "deny"
# Casting enum constructor is always a bug
cast_enum_constructor = "deny"
# Always undefined/wrong
cast_nan_to_int = "deny"
# Always use correct from_raw_parts variant
cast_slice_from_raw_parts = "deny"
# Always a bug
confusing_method_to_numeric_cast = "deny"
# Checking emptiness of a const is always pointless
const_is_empty = "deny"
# Cross-pointer transmute is always dangerous
crosspointer_transmute = "deny"
# Interior mutable const is always a bug
declare_interior_mutable_const = "deny"
# Always fix deprecated clippy cfg attrs
deprecated_clippy_cfg_attr = "deny"
# Dropping something without Drop is always pointless
drop_non_drop = "deny"
# Duplicate module declaration is always a bug
duplicate_mod = "deny"
# Duplicate attributes are always a mistake
duplicated_attributes = "deny"
# Empty doc comment is always a mistake
empty_docs = "deny"
# Busy loop without yield is always wrong
empty_loop = "deny"
# Float comparison without abs is always wrong
float_equality_without_abs = "deny"
# Forgetting something without Drop is always pointless
forget_non_drop = "deny"
# //// instead of /// is always a typo
four_forward_slashes = "deny"
# Always a bug
from_raw_with_void_ptr = "deny"
# Using API above your MSRV is always wrong
incompatible_msrv = "deny"
# Open option that does nothing is always a bug
ineffective_open_options = "deny"
# Always a bug
iter_out_of_bounds = "deny"
# Path::join with absolute path discards the base — always a bug
join_absolute_paths = "deny"
# Dropping a future immediately is always wrong
let_underscore_future = "deny"
# Always use the right combinator
lines_filter_map_ok = "deny"
# Getter returning wrong field is always a bug
misnamed_getters = "deny"
# a += a + b instead of a += b — always a bug
misrefactored_assign_op = "deny"
# a = b = c is always confusing/wrong in Rust
multi_assignments = "deny"
# Mutating range bound during iteration is always a bug
mut_range_bound = "deny"
# Interior-mutable HashMap key is always a bug
mutable_key_type = "deny"
# Replace that does nothing is always a bug
no_effect_replace = "deny"
# Clone impl that doesn't delegate properly
non_canonical_clone_impl = "deny"
# PartialOrd that contradicts Ord
non_canonical_partial_ord_impl = "deny"
# Ambiguous octal escape is always confusing
octal_escapes = "deny"
# .ends_with(".ext") doesn't check extension — always a bug
path_ends_with_ext = "deny"
# Doesn't grant write on all platforms — always a bug
permissions_set_readonly_false = "deny"
# Always a constraint violation
pointers_in_nomem_asm_block = "deny"
# Almost always a forgotten else
possible_missing_else = "deny"
# Print inside Display/Debug impl is always wrong
print_in_format_impl = "deny"
# vec![rc.clone(); n] clones once — always a bug
rc_clone_in_vec_init = "deny"
# let x = x; is always pointless
redundant_locals = "deny"
# vec![0..n] creates vec with one Range — always a bug
single_range_in_vec_init = "deny"
# size_of_val(&ref) gives pointer size — always a bug
size_of_ref = "deny"
# Whitespace that hides a compound assignment
suspicious_assignment_formatting = "deny"
# Space in command arg is always wrong
suspicious_command_arg_space = "deny"
# Malformed doc comment
suspicious_doc_comments = "deny"
# Misleading else formatting
suspicious_else_formatting = "deny"
# .map() used for side effects — always wrong
suspicious_map = "deny"
# Open options that conflict
suspicious_open_options = "deny"
# Ambiguous to_owned call
suspicious_to_owned = "deny"
# Misleading unary op whitespace
suspicious_unary_op_formatting = "deny"
# Swapping via raw ptr instead of safe swap
swap_ptr_to_ref = "deny"
# Test attribute in doctest is always wrong
test_attr_in_doctest = "deny"
# type_id() on Box<dyn T> gives Box's type_id — always a bug
type_id_on_box = "deny"
# Infinite recursion is always a bug (clippy version)
unconditional_recursion = "deny"
# Wrong clippy cfg
unnecessary_clippy_cfg = "deny"
# vec![side_effect(); 0] still runs it — always a bug
zero_repeat_side_effects = "deny"
# Not calling wait() on child process — always a bug
zombie_processes = "deny"

# ============================
# Suspicious → warn (intentional keeps)
# ============================
# Suspicious but sometimes intentional
cast_abs_to_unsigned = "warn"
# Sometimes intentional for FFI
cast_enum_truncation = "warn"
# Can be intentional in some macro designs
crate_in_macro_def = "warn"
# Documentation style issue
doc_nested_refdefs = "warn"
# Documentation style issue
doc_suspicious_footnotes = "warn"
# Style, not a bug
empty_line_after_doc_comments = "warn"
# Style, not a bug
empty_line_after_outer_attr = "warn"
# Informational
infallible_try_from = "warn"
# Can have false positives with complex macros
macro_metavars_in_unsafe = "warn"
# Style preference
manual_unwrap_or_default = "warn"
# Good practice but not a bug
missing_transmute_annotations = "warn"
# Style
needless_character_iteration = "warn"
# Style
needless_maybe_sized = "warn"
# Sometimes intentional
repeat_vec_with_capacity = "warn"
# Worth knowing but not always a bug
repr_packed_without_abi = "warn"
# Has false positives with custom numeric types
suspicious_arithmetic_impl = "warn"
# Has false positives
suspicious_op_assign_impl = "warn"
# Style improvement
unnecessary_get_then_check = "warn"
# Style
unnecessary_option_map_or_else = "warn"
# Style
unnecessary_result_map_or_else = "warn"

# ============================
# Pedantic → warn
# ============================
# ============================
# Pedantic → warn (C11)
# ============================
# Match on bool — prefer if/else
match_bool = "warn"
# Identical match arms that can be combined
match_same_arms = "deny"
# match result { Err(_) => ... } — use specific error
match_wild_err_arm = "warn"
# Public functions returning Result should document errors
missing_errors_doc = "deny"
# Custom Debug impls should include all fields
missing_fields_in_debug = "warn"

# ============================
# Pedantic → warn (C12)
# ============================
# Public functions that can panic should document it
missing_panics_doc = "deny"
# Functions returning useful values should be #[must_use]
must_use_candidate = "deny"
# Prefer logical operators (&&/||) over bitwise (&/|) for bools
needless_bitwise_bool = "warn"
# Prefer restructuring loop over `continue`
needless_continue = "warn"
# Prefer iterator methods over `for` + side effects
needless_for_each = "warn"

# ============================
# Pedantic → warn (C13)
# ============================
# Remove unnecessary raw string hash symbols (r#"foo"# → r"foo")
needless_raw_string_hashes = "warn"
# #[no_mangle] on Rust ABI functions is suspicious — usually needs extern "C"
no_mangle_with_rust_abi = "warn"
# Option<Option<T>> is confusing — flatten or use a custom enum
option_option = "warn"
# Use ptr::cast::<T>() instead of `as *const T` / `as *mut T`
ptr_as_ptr = "warn"
# Use ptr.cast_const() / ptr.cast_mut() instead of `as *const T` / `as *mut T`
ptr_cast_constness = "warn"

# ============================
# Pedantic → warn (C14)
# ============================
# Prefer `0..n` over `0..=n-1`
range_minus_one = "deny"
# Prefer `0..=n` over `0..n+1`
range_plus_one = "deny"
# Use method reference instead of closure: `.map(|x| x.to_string())` → `.map(ToString::to_string)`
redundant_closure_for_method_calls = "warn"
# Use ptr::from_ref() / ptr::from_mut() instead of `&x as *const T`
ref_as_ptr = "warn"
# Use `Option<&T>` instead of `&Option<T>` in function args
ref_option = "warn"

# ============================
# Pedantic → warn (C15)
# ============================
# Detect `Option<&Option<T>>` — usually a mistake
ref_option_ref = "warn"
# Methods returning `Self` should be `#[must_use]`
return_self_not_must_use = "deny"
# Detect identical function calls in both branches of an if/else
same_functions_in_if_condition = "warn"
# `#[should_panic]` tests should specify `expected` string
should_panic_without_expect = "warn"
# Use `.first()` instead of `.get(0)` — clearer intent
get_first = "deny"
# Use unstable sort for primitives (faster, no allocation)
stable_sort_primitive = "deny"

# ============================
# Pedantic → warn (C16)
# ============================
# Use `.lines()` instead of `.split('\n')`
str_split_at_newline = "warn"
# Use `+=` for string concatenation instead of `= ... + &s`
string_add_assign = "warn"
# Flag structs with >3 bool fields
struct_excessive_bools = "warn"
# Detect field names that redundantly include the struct name
struct_field_names = "deny"
# Use ptr::cast instead of transmute between pointer types
transmute_ptr_to_ptr = "warn"

# ============================
# Pedantic → warn (C17)
# ============================
# Pass small Copy types by value, not by reference
trivially_copy_pass_by_ref = "warn"
# Inline format args: `format!("{x}")` not `format!("{}", x)`
uninlined_format_args = "warn"
# Return T instead of Box<T> when the type is known at compile time
unnecessary_box_returns = "warn"
# Use `collect::<String>()` instead of `collect::<Vec<_>>().join("")`
unnecessary_join = "deny"
# Don't wrap return values in Option/Result when they're always Some/Ok
unnecessary_wraps = "deny"

# ============================
# Pedantic → warn (C18)
# ============================
# Flatten nested `A | B | C` patterns in match arms
unnested_or_patterns = "warn"
# Add underscores for readability: `1_000_000` not `1000000`
unreadable_literal = "deny"
# Warn when Deserialize is derived on a struct with unsafe fields
unsafe_derive_deserialize = "warn"
# Detect async functions that don't use .await
unused_async = "warn"
# Detect methods that don't use `self`
unused_self = "warn"

# ============================
# Pedantic → warn (C19)
# ============================
# Flag use of `_`-prefixed bindings after they're declared
used_underscore_binding = "warn"
# Flag items prefixed with `_` that are actually used
used_underscore_items = "warn"
# Prefer `.count_ones() != 0` over `x & (x - 1) != 0` for power-of-two checks
verbose_bit_mask = "warn"
# Prefer explicit imports over glob `use foo::*`
wildcard_imports = "deny"
# Use `HashSet` instead of `HashMap<K, ()>`
zero_sized_map_values = "warn"

# ============================
# Pedantic → warn (C1-C10, prior batches)
# ============================
# Use clone_from when possible
assigning_clones = "warn"
# Use as/into instead of if bool { 1 } else { 0 }
bool_to_int_with_if = "warn"
# Use addr_of! instead of &x as *const
borrow_as_ptr = "warn"
# Always use case-insensitive extension comparison
case_sensitive_file_extension_comparisons = "warn"
# Use From instead of as for lossless casts
cast_lossless = "warn"

# ============================
# Nursery → warn (cherry-picked stable lints)
# ============================
# Detect `as_ptr()` followed by `cast_mut()` — use `as_mut_ptr()` instead
as_ptr_cast_mut = "warn"
# Detect identical code at start/end of if/else branches — factor out
branches_sharing_code = "warn"
# Collection populated but never read — dead code
collection_is_never_read = "warn"
# `debug_assert!(x.mutating_call())` — side effect lost in release builds
debug_assert_with_mut_call = "warn"
# Derive `Eq` when `PartialEq` is derived and all fields are `Eq`
derive_partial_eq_without_eq = "warn"
# `impl From<T>` that can panic — use `TryFrom` instead
fallible_impl_from = "warn"
# Futures that are not `Send` — problematic for multi-threaded executors
future_not_send = "deny"
# Functions that could be `const fn` but aren't
missing_const_for_fn = "warn"
# `&mut T` parameter that doesn't need mutability — use `&T`
needless_pass_by_ref_mut = "warn"
# Prefer `map_or` / `map_or_else` over `if let Some(x) = opt { ... } else { ... }`
option_if_let_else = "deny"
# Lock/guard held across match scrutinee — potential deadlock
significant_drop_in_scrutinee = "deny"
# Drop guards held longer than needed — tighten scope
significant_drop_tightening = "deny"
# `T: A + B` where `B: A` — `A` bound is redundant
trait_duplication_in_bounds = "deny"
# Same as above but for `where` clauses
type_repetition_in_bounds = "deny"
# `Foo { a: a, b: b }` where fields already match — use `Foo { a, b }`
unnecessary_struct_initialization = "deny"
# Use `Self` instead of the type name inside impl blocks
use_self = "deny"
# Flag `Mutex<T>` where `AtomicT` would suffice — avoid lock overhead
mutex_atomic = "deny"
# Flag `let mut v = Vec::new(); v.push(x);` — use `vec![x]` or `with_capacity`
vec_init_then_push = "deny"

# ============================
# Restriction → warn (carefully selected)
# ============================
# Flag bare #[allow(...)] — prefer #[expect(...)] which errors when lint no longer fires
allow_attributes = "deny"
# Require reason on all #[allow/expect] — forces documentation of suppression rationale
allow_attributes_without_reason = "deny"
# Flag `cfg(not(test))` — usually a code smell, prefer `cfg(test)` with inverted logic
cfg_not_test = "warn"
# Use `Arc::clone(&x)` instead of `x.clone()` — makes ref-count clone explicit
clone_on_ref_ptr = "warn"
# Flag `dbg!()` macro — should not ship to production
dbg_macro = "deny"
# Flag empty `Drop` impls — `impl Drop for T {}` is a no-op that prevents optimizations
empty_drop = "warn"
# Flag `Foo {}` on unit variants — prefer `Foo` without brackets
empty_enum_variants_with_brackets = "warn"
# Flag `struct Foo {}` — prefer `struct Foo;` for unit structs
empty_structs_with_brackets = "warn"
# Flag `Error` in error type names — `struct FooError` not `struct Error`
error_impl_error = "warn"
# Flag `std::process::exit()` — prefer returning from main
exit = "warn"
# Flag `.expect()` — prefer explicit error handling or `unwrap_or`
expect_used = "warn"
# Flag `fn as usize` — function-to-integer casts are suspicious
fn_to_numeric_cast_any = "warn"
# Flag `map[key]` indexing — prefer `.get()` which returns Option
get_unwrap = "warn"
# Flag infinite loops without break — `loop {}` without exit path
infinite_loop = "warn"
# Flag `let _ = must_use_fn()` — don't silently discard important results
let_underscore_must_use = "warn"
# Flag float literals that lose precision — `0.1` != exact `0.1_f64`
lossy_float_literal = "warn"
# Require messages on all assert! macros — `assert!(x, "reason")` not just `assert!(x)`
missing_assert_message = "warn"
# Flag `panic!()` — prefer returning Result or specific error types
panic = "warn"
# Flag `eprint!`/`eprintln!` — prefer structured logging
print_stderr = "warn"
# Flag `print!`/`println!` — prefer structured logging
print_stdout = "warn"
# Flag `..` in fully-bound struct patterns — be explicit about all fields
rest_pat_in_fully_bound_structs = "warn"
# Flag `String + &str` concatenation — prefer `format!()` or `push_str()`
string_add = "warn"
# Flag `todo!()` — should not ship to production
todo = "deny"
# Require `// SAFETY:` comment on all unsafe blocks
undocumented_unsafe_blocks = "warn"
# Flag `unimplemented!()` — should not ship to production
unimplemented = "warn"
# Flag `// SAFETY:` comments without nearby unsafe — stale safety docs
unnecessary_safety_comment = "warn"
# Flag `# Safety` doc sections without unsafe in the function
unnecessary_safety_doc = "warn"
# Flag `unreachable!()` — prefer compile-time guarantees or specific panics
unreachable = "warn"
# Flag `.unwrap()` — prefer explicit error handling
unwrap_used = "warn"
# Flag `_` in match on non-exhaustive enums — be explicit about variants
wildcard_enum_match_arm = "warn"
# Flag `std::mem::forget()` — prevents memory/resource leaks
mem_forget = "deny"
# Flag `Rc<Mutex<T>>` — almost always a design error, use `Arc<Mutex<T>>`
rc_mutex = "deny"
# Flag `&str[start..end]` slicing — may panic on UTF-8 boundaries
string_slice = "deny"

# ============================
# Pedantic/Restriction/Nursery — Tier additions
# ============================
# Catches `"hello {name}"` without format! — false-positives on .replace() templates
literal_string_with_formatting_args = "deny"
# PathBuf::push with absolute path silently overwrites — always a bug
path_buf_push_overwrite = "deny"
# Operator precedence bugs in grouped comparisons
suspicious_operation_groupings = "deny"
# `2 ^ 8` is XOR not pow — always a bug
suspicious_xor_used_as_pow = "deny"
# Panicking inside `-> Result` defeats the purpose
panic_in_result_fn = "deny"
# `.unwrap()` inside `-> Result` — propagate instead
unwrap_in_result = "deny"
# `.ok()` discarded silently — handle the Result
unused_result_ok = "deny"
# `impl<B, A> Foo<A, B>` — param order mismatch
mismatching_type_param_order = "deny"
# Use std LazyLock instead of lazy_static (edition 2024)
non_std_lazy_statics = "deny"
# Tests belong in `#[cfg(test)] mod tests`
tests_outside_test_module = "deny"
# `.unwrap_or(expensive())` — use `unwrap_or_else`
or_fun_call = "deny"
# `.collect().iter()` — skip the collect
needless_collect = "deny"
# `set.contains() + set.insert()` — use entry API
set_contains_or_insert = "deny"
# `.as_ref().cloned()` → `.clone()`
option_as_ref_cloned = "deny"
# `"foo".as_bytes()` → `b"foo"`
string_lit_as_bytes = "deny"
# Concise doc summary paragraphs
too_long_first_doc_paragraph = "deny"
# `push_str(&format!(...))` → `write!`
format_push_string = "deny"
# `.split("x")` → `.split('x')`
single_char_pattern = "deny"
# `{:?}` where `{}` works (Display impl available)
unnecessary_debug_formatting = "deny"
# Trailing `;` in expression position
unnecessary_semicolon = "deny"
# `.map_err(|_| ...)` loses error info
map_err_ignore = "deny"
# Use `fs::read_to_string` instead of open+read
verbose_file_reads = "deny"
# `PathBuf::new()` + `.push()` → `PathBuf::from()`
pathbuf_init_then_push = "deny"
# Trait impl renames parameters vs trait definition
renamed_function_params = "deny"
# `{:?}` in production code — prefer Display
use_debug = "deny"
# `let x: Foo = Foo::new()` — redundant annotation
redundant_type_annotations = "deny"

# ============================
# Taskforce lints — high-value, systematic migration
# ============================
# Forces explicit checked arithmetic instead of silent panics
arithmetic_side_effects = "warn"
# Forces .get() instead of [] indexing — explicit panic handling
indexing_slicing = "warn"
# `as` silently truncates; replacing with TryFrom is strictly safer
# DISABLED: as_conversions = "warn"
# Catches real bugs comparing floats to constants
float_cmp_const = "warn"
# Forces explicit intent on integer division
# DISABLED: integer_division = "warn"
# Same rationale as integer_division
modulo_arithmetic = "warn"
# Eliminates subtle type inference bugs with numeric literals
# DISABLED: default_numeric_fallback = "warn"
# Improves match clarity, mechanical fixes
# DISABLED: pattern_type_mismatch = "warn"
# Docs on private items — pays dividends forever
missing_docs_in_private_items = "warn"
# Forces deliberate API design with #[non_exhaustive]
# DISABLED: exhaustive_enums = "warn"
# Same — forces deliberate struct API design
# DISABLED: exhaustive_structs = "warn"
# Pure mechanical cleanup, free quality
# DISABLED: redundant_pub_crate = "warn"
# Mechanical, zero controversy
map_with_unused_argument_over_ranges = "warn"
# Real correctness bug class in float loops
while_float = "warn"
# Free perf for numerics
imprecise_flops = "warn"
# Free perf for numerics
suboptimal_flops = "warn"
# Audit and deduplicate deps
# Transitive deps (typst→hayagriva→thiserror 1, notify→inotify→bitflags 1, proc-macros→syn 1)
# Cannot fix without upstream migration. Revisit when typst ecosystem upgrades.
multiple_crate_versions = "allow"
# Forces explicit todo!() or real impls — no silent default footguns
missing_trait_methods = "warn"
# Enforces String::from consistency over .to_string() on &str
# DISABLED: str_to_string = "warn"
# Prevents accidental drops of MustUse types
# DISABLED: let_underscore_untyped = "warn"
# Catches debug-logging mistakes with pointer formatting
pointer_format = "warn"
# Forces exhaustiveness thinking in if-else chains
# DISABLED: else_if_without_else = "warn"
# Unrelated shadows are genuinely confusing
shadow_unrelated = "warn"
# Mechanical, makes docs professional
# DISABLED: doc_paragraphs_missing_punctuation = "warn"
# Named lifetimes improve complex code readability
single_char_lifetime_names = "warn"
# Audit re-exports are intentional
pub_use = "warn"
# Isolating unsafe ops is a strict quality win
multiple_unsafe_ops_per_block = "warn"
# Prevents genuine UB with unions
default_union_representation = "warn"

# ============================
# Nursery — remaining (warn)
# ============================
clear_with_drain = "warn"
coerce_container_to_any = "warn"
doc_link_code = "warn"
equatable_if_let = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
non_send_fields_in_send_ty = "warn"
nonstandard_macro_braces = "warn"
read_zero_byte_vec = "warn"
single_option_map = "warn"
trailing_empty_array = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"
volatile_composites = "warn"

# ============================
# Pedantic — remaining (warn)
# ============================
expl_impl_clone_on_copy = "warn"
format_collect = "warn"
inline_always = "warn"
invalid_upcast_comparisons = "warn"
ip_constant = "warn"
large_digit_groups = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
manual_is_power_of_two = "warn"
manual_midpoint = "warn"
maybe_infinite_iter = "warn"
mut_mut = "warn"
naive_bytecount = "warn"
no_effect_underscore_binding = "warn"
pub_underscore_fields = "warn"
ref_binding_to_reference = "warn"
self_only_used_in_recursion = "warn"
# =====================
similar_names = "warn"
# DISABLED: too_many_lines = "warn"
unchecked_time_subtraction = "warn"
unicode_not_nfc = "warn"
unnecessary_literal_bound = "warn"

# ============================
# Restriction — remaining (warn)
# ============================
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
# DISABLED: cognitive_complexity = "warn"
create_dir = "warn"
decimal_literal_representation = "warn"
deref_by_slicing = "warn"
doc_include_without_cfg = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
integer_division_remainder_used = "warn"
iter_over_hash_type = "warn"
large_include_file = "warn"
missing_asserts_for_indexing = "warn"
mixed_read_write_in_expression = "warn"
module_name_repetitions = "deny"
# Multiple impl blocks for same type — warn only (App is intentionally split across 7 files)
multiple_inherent_impl = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
partial_pub_fields = "warn"
precedence_bits = "warn"
rc_buffer = "warn"
redundant_test_prefix = "warn"
return_and_then = "warn"
same_name_method = "warn"
string_lit_chars_any = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unused_trait_names = "warn"

# ============================
# Cargo → warn
# ============================
# Ensures proper Cargo.toml metadata (description, license, etc.)
cargo_common_metadata = "warn"
# Feature names shouldn't be negative (no_*)
negative_feature_names = "warn"
# Feature named same as dep is redundant
redundant_feature_names = "warn"
# Always pin dependency versions
wildcard_dependencies = "warn"

[package]
name = "tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cp-base.workspace = true
log = "0.4"
cp-mod-console = { path = "crates/cp-mod-console" }
cp-mod-callback = { path = "crates/cp-mod-callback" }
cp-mod-scratchpad = { path = "crates/cp-mod-scratchpad" }
cp-mod-todo = { path = "crates/cp-mod-todo" }
cp-mod-memory = { path = "crates/cp-mod-memory" }
cp-mod-tree = { path = "crates/cp-mod-tree" }
cp-mod-git = { path = "crates/cp-mod-git" }
cp-mod-logs = { path = "crates/cp-mod-logs" }
cp-mod-github = { path = "crates/cp-mod-github" }
cp-mod-files = { path = "crates/cp-mod-files" }
cp-mod-spine = { path = "crates/cp-mod-spine" }
cp-mod-preset = { path = "crates/cp-mod-preset" }
cp-mod-prompt = { path = "crates/cp-mod-prompt" }
cp-mod-typst = { path = "crates/cp-mod-typst" }
cp-mod-brave = { path = "crates/cp-mod-brave" }
cp-mod-firecrawl = { path = "crates/cp-mod-firecrawl" }
cp-mod-queue = { path = "crates/cp-mod-queue" }
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
dotenvy = "0.15"
unicode-width.workspace = true
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
secrecy = { version = "0.10", features = ["serde"] }
notify = "6.1"

[lints]
workspace = true
